--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,20 +1,18 @@
 name: Generate snake animation
 
 on:
-  schedule: # Execute every 12 hours
-    - cron: "0 */12 * * *"
-  workflow_dispatch:
+  schedule:
+    - cron: "0 */12 * * *"  # Runs every 12 hours
+  workflow_dispatch:        # Allows manual trigger
   push:
     branches:
-      - main
+      - main                # Or your main branch name
 
 jobs:
   generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
     steps:
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
